correct unit test for dao layer

--- a/src/test/resources/unitils.properties
+++ b/src/test/resources/unitils.properties
@@ -2,11 +2,11 @@ unitils.modules = database, spring, dbunit
 unitils.modules.dbunit.className = org.dbunit.MySqlDbUnitModule
 
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/sblog_test?useUnicode=true&characterEncoding=UTF-8
+database.url=jdbc:mysql://localhost:3306/sblog?useUnicode=true&characterEncoding=UTF-8
 database.dialect=mysql
 database.userName=root
 database.password=1234567
-database.schemaNames=sblog_test
+database.schemaNames=sblog
 
 # The database maintainer is disabled by default.
 updateDataBaseSchema.enabled=false
@@ -15,8 +15,10 @@ dbMaintainer.autoCreateExecutedScriptsTable=false
 #dbMaintainer.script.locations=D:/book/svn2/code/spring4x-project/spring4x-chapter20/src/test/resources/dbscripts
 dbMaintainer.script.locations=src/test/resources/dbscripts
 
-DbUnitModule.DataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
-DbUnitModule.ExpectedDataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
+#DbUnitModule.DataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
+#DbUnitModule.ExpectedDataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
+
+DbUnitModule.DataSet.factory.default=org.unitils.dbunit.datasetfactory.impl.MultiSchemaXmlDataSetFactory
 
 #CleanInsertLoadStrategy:先删除dateSet中有关表的数据，然后再插入数据
 #InsertLoadStrategy：只插入数据
