add more comments for unitils config file

--- a/src/test/resources/unitils.properties
+++ b/src/test/resources/unitils.properties
@@ -6,6 +6,7 @@ database.url=jdbc:mysql://localhost:3306/sblog?useUnicode=true&characterEncoding
 database.dialect=mysql
 database.userName=root
 database.password=1234567
+# 这里要使用跟正式数据库
 database.schemaNames=sblog
 
 # The database maintainer is disabled by default.
