--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,10 +15,52 @@
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
 	
-	
+	<servlet>
+		<servlet-name>springmvc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:springmvc-config.xml</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
   
+  	<servlet-mapping>
+  		<servlet-name>springmvc</servlet-name>
+  		<url-pattern>/</url-pattern>
+  	</servlet-mapping>
   
+  	<filter>
+  		<filter-name>characterEncodingFilter</filter-name>
+  		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  		<init-param>
+  			<param-name>encoding</param-name>
+  			<param-value>UTF-8</param-value>
+  		</init-param>
+  	</filter>
   
+  	<filter-mapping>
+  		<filter-name>characterEncodingFilter</filter-name>
+  		<url-pattern>/*</url-pattern>
+  	</filter-mapping>
   
-  
+  	<jsp-config>
+  		<jsp-property-group>
+  			<url-pattern>*.jsp</url-pattern>
+  			<el-ignored>false</el-ignored>
+  			<scripting-invalid>true</scripting-invalid>
+  			<include-prelude>/WEB-INF/jsp/taglib.jsp</include-prelude>
+  		</jsp-property-group>
+  	</jsp-config>
+  	
+  	<!-- <error-page>
+  		<error-code>404</error-code>
+  		<location>/WEB-INF/404.html</location>
+  	</error-page> -->
+  	
+  	<welcome-file-list>
+  		<welcome-file>index.jsp</welcome-file>
+  		<welcome-file>index.html</welcome-file>
+  	</welcome-file-list>
+  	
 </web-app>
