--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,32 @@
   
   <build>
     <finalName>sblog</finalName>
+      <plugins>
+          <plugin>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>2.6</version>
+              <executions>
+                  <execution>
+                      <id>copy-xmls</id>
+                      <phase>process-resources</phase>
+                      <goals>
+                          <goal>copy-resources</goal>
+                      </goals>
+                      <configuration>
+                          <outputDirectory>${basedir}/target/classes</outputDirectory>
+                          <resources>
+                              <resource>
+                                  <directory>${basedir}/src/main/java</directory>
+                                  <includes>
+                                      <include>**/*.xml</include>
+                                  </includes>
+                              </resource>
+                          </resources>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
+      </plugins>
   </build>
   
   
