--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,13 @@
   		<error-code>404</error-code>
   		<location>/WEB-INF/404.html</location>
   	</error-page> -->
-  	
+
+	<resource-ref>
+		<res-ref-name>mysql/c3p0</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
   	<welcome-file-list>
   		<welcome-file>index.jsp</welcome-file>
   		<welcome-file>index.html</welcome-file>
