--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,12 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
-	
-	<servlet>
+    <context-param>
+        <param-name/>
+        <param-value/>
+    </context-param>
+
+    <servlet>
 		<servlet-name>springmvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -58,11 +62,12 @@
   		<location>/WEB-INF/404.html</location>
   	</error-page> -->
 
-	<resource-ref>
-		<res-ref-name>mysql/c3p0</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
+	<!-- jndi数据源声明 没有也完全没问题！-->
+	<!--<resource-ref>-->
+		<!--<res-ref-name>mysql/c3p0</res-ref-name>-->
+		<!--<res-type>javax.sql.DataSource</res-type>-->
+		<!--<res-auth>Container</res-auth>-->
+	<!--</resource-ref>-->
 
   	<welcome-file-list>
   		<welcome-file>index.jsp</welcome-file>
