--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
           <groupId>net.sf.ehcache</groupId>
           <artifactId>ehcache</artifactId>
       </dependency>
+      <dependency>
+          <groupId>org.quartz-scheduler</groupId>
+          <artifactId>quartz</artifactId>
+          <version>2.3.0</version>
+      </dependency>
   </dependencies>
   
   
