--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,10 @@
           <artifactId>quartz</artifactId>
           <version>2.3.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+      </dependency>
   </dependencies>
   
   
