--- a/src/test/resources/unitils.properties
+++ b/src/test/resources/unitils.properties
@@ -6,20 +6,22 @@ database.url=jdbc:mysql://localhost:3306/sblog?useUnicode=true&characterEncoding
 database.dialect=mysql
 database.userName=root
 database.password=1234567
-# 这里要使用跟正式数据库
-database.schemaNames=sblog
+#数据库名不能有"-"
+database.schemaNames=sblog_test
 
 # The database maintainer is disabled by default.
-updateDataBaseSchema.enabled=false
+updateDataBaseSchema.enabled=true
+
 #This table is by default not created automatically
-dbMaintainer.autoCreateExecutedScriptsTable=false
+dbMaintainer.autoCreateExecutedScriptsTable=true
+
 #dbMaintainer.script.locations=D:/book/svn2/code/spring4x-project/spring4x-chapter20/src/test/resources/dbscripts
 dbMaintainer.script.locations=src/test/resources/dbscripts
 
-#DbUnitModule.DataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
-#DbUnitModule.ExpectedDataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
+DbUnitModule.DataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
+DbUnitModule.ExpectedDataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
 
-DbUnitModule.DataSet.factory.default=org.unitils.dbunit.datasetfactory.impl.MultiSchemaXmlDataSetFactory
+#DbUnitModule.DataSet.factory.default=org.unitils.dbunit.datasetfactory.impl.MultiSchemaXmlDataSetFactory
 
 #CleanInsertLoadStrategy:先删除dateSet中有关表的数据，然后再插入数据
 #InsertLoadStrategy：只插入数据
@@ -30,7 +32,7 @@ DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy
 #commit 是单元测试方法过后提交事务
 #rollback 是回滚事务
 #disabled 是没有事务，默认情况下，事务管理是disabled
-DatabaseModule.Transactional.value.default=commit
+DatabaseModule.Transactional.value.default=disabled
 
 
 # XSD generator
