add unitils, dbunit for excel dateset unit testing

--- a/src/test/resources/unitils.properties
+++ b/src/test/resources/unitils.properties
@@ -1,8 +1,11 @@
+# 详细，请查看unitils-core包下的unitils-default.properties文件
+
 unitils.modules = database, spring, dbunit
-unitils.modules.dbunit.className = org.dbunit.MySqlDbUnitModule
+# 这里之前有笔误，是module不是modules
+unitils.module.dbunit.className = com.ian.sblog.util.MySqlDbUnitModule
 
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/sblog?useUnicode=true&characterEncoding=UTF-8
+database.url=jdbc:mysql://localhost:3306/sblog_test?useUnicode=true&characterEncoding=UTF-8
 database.dialect=mysql
 database.userName=root
 database.password=1234567
@@ -15,7 +18,6 @@ updateDataBaseSchema.enabled=true
 #This table is by default not created automatically
 dbMaintainer.autoCreateExecutedScriptsTable=true
 
-#dbMaintainer.script.locations=D:/book/svn2/code/spring4x-project/spring4x-chapter20/src/test/resources/dbscripts
 dbMaintainer.script.locations=src/test/resources/dbscripts
 
 DbUnitModule.DataSet.factory.default=com.ian.sblog.test.dataset.excel.MultiSchemaXlsDataSetFactory
@@ -35,6 +37,6 @@ DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy
 DatabaseModule.Transactional.value.default=disabled
 
 
-# XSD generator
+# XSD generator 貌似没什么用
 dataSetStructureGenerator.xsd.dirName=resources/xsd
 #dbMaintainer.generateDataSetStructure.enabled=true
