--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,26 @@
   </parent>
 
   <properties>
-  	<java.version>1.8</java.version>
+      <java.version>1.8</java.version>
       <unitils.version>3.4.2</unitils.version>
+      <jetty.version>9.4.7.v20170914</jetty.version><!--改为jetty服务器的时候这里一定要声明使用的jetty服务器的版本号-->
   </properties>
 
   <dependencies>
-  	<dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-tomcat</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-jetty</artifactId>
+      </dependency>
     <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
